# mercek

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
mercek-site/: .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml
mercek-site/public/: llms.txt  robots.txt
mercek-site/src/components/: Footer.astro  Nav.astro  ScreenshotFrame.astro
mercek-site/src/layouts/: Layout.astro
mercek-site/src/pages/: docs.astro  index.astro
mercek-site/src/styles/: global.css
specs/: mercek.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  mock.rs  state.rs
src-tauri/src/agent/: acp.rs  adapters.rs  bridge.rs  dispatch.rs  instructions.md  ipc.rs  mcp.rs  mock_session.rs  mod.rs  proc.rs  session.rs
src-tauri/src/aws/: client_pool.rs  credentials.rs  mod.rs  profiles.rs  retry.rs
src-tauri/src/commands/: agent.rs  clusters.rs  discovery.rs  exec.rs  images.rs  logs.rs  metrics.rs  mod.rs  profiles.rs  services.rs  tasks.rs
src-tauri/src/db/: mod.rs  store.rs
src-tauri/src/discovery/: mod.rs  orchestrator.rs
src-tauri/src/domain/: agent.rs  cluster.rs  common.rs  container_instance.rs  graph.rs  image_scan.rs  log.rs  metric.rs  mod.rs  networking.rs  profile.rs  scaling.rs  service.rs  target_health.rs  task.rs  task_def.rs
src-tauri/src/resources/: mod.rs
src-tauri/src/resources/autoscaling/: client.rs  map.rs  mod.rs
src-tauri/src/resources/cloudwatch/: client.rs  map.rs  mod.rs
src-tauri/src/resources/ec2/: client.rs  map.rs  mod.rs
src-tauri/src/resources/ecr/: client.rs  map.rs  mod.rs
src-tauri/src/resources/ecs/: client.rs  map.rs  mod.rs  mutate.rs
src-tauri/src/resources/elb/: client.rs  map.rs  mod.rs
src-tauri/src/resources/logs/: client.rs  map.rs  mod.rs
src-tauri/src/streaming/: exec.rs  logs.rs  mod.rs
src-tauri/tests/: discovery_fan_out.rs
src/app/: keybindings.ts  providers.tsx  shell.tsx
src/components/layout/: AppShell.tsx  Drawer.tsx  LeftRail.tsx  RefreshButton.tsx  RightPanel.tsx  StatusBar.tsx  TabBar.tsx  Workspace.tsx
src/components/ui/: Badge.tsx  CommandPalette.tsx  ConfirmDialog.tsx  DataTable.tsx  DiffView.tsx  IconButton.tsx  Markdown.tsx  MultiCheck.tsx  OpenInAwsButton.tsx  Select.tsx  Spinner.tsx  StateView.tsx  Tabs.tsx
src/features/agent/: api.ts  thread.ts
src/features/agent/components/: AgentPanel.tsx  AgentPicker.tsx  ChatThread.tsx  InvestigateButton.tsx  ProposalDialog.tsx  ThreadMenu.tsx
src/features/clusters/: api.ts
src/features/clusters/components/: ClusterDetail.tsx  CreateClusterDialog.tsx
src/features/discovery/: api.ts  tabs.ts
src/features/discovery/components/: DiscoveryBanner.tsx  ResourceTree.tsx
src/features/exec/components/: TerminalPanel.tsx
src/features/images/: api.ts  parse.ts
src/features/images/components/: ImageScansSection.tsx
src/features/logs/: api.ts
src/features/logs/components/: LogTailPanel.tsx
src/features/metrics/: api.ts
src/features/metrics/components/: MetricChart.tsx  MetricsView.tsx  RightSizingPanel.tsx
src/features/overview/: health.ts
src/features/overview/components/: OverviewDashboard.tsx
src/features/profiles/: api.ts
src/features/profiles/components/: ReauthBanner.tsx  ScopeSelector.tsx
src/features/sentinel/: detect.ts  store.ts  useSentinel.ts  useVulnFindings.ts
src/features/sentinel/components/: NotificationsInbox.tsx  ObservationList.tsx  ObservationsSection.tsx
src/features/services/: api.ts
src/features/services/components/: CompareServiceDialog.tsx  CreateServiceDialog.tsx  DeployImageDialog.tsx  DeploymentTimeline.tsx  RollbackDialog.tsx  ScaleDialog.tsx  ScalingPanel.tsx  ServiceDetail.tsx  TargetsPanel.tsx  UpdateDialog.tsx
src/features/settings/: SettingsDialog.tsx
src/features/tasks/: api.ts
src/features/tasks/components/: CreateTaskDefDialog.tsx  NetworkConfigFields.tsx  RegisterDialog.tsx  RunTaskDialog.tsx  TaskDetail.tsx
src/features/topology/: TopologyView.tsx
src/features/updates/: useUpdater.ts
src/features/updates/components/: UpdateBanner.tsx
src/lib/: agentHistory.ts  arn.ts  aws-console.ts  errors.ts  format.ts  open.ts  prefs.ts  query-client.ts  query-keys.ts  status.ts  tauri.ts
src/styles/: globals.css  tokens.css
src/types/: index.ts  lucide-react.d.ts
