[package]
name = "mercek"
version = "0.1.0"
description = "A desktop IDE for AWS ECS"
authors = ["Utibeabasi Umanah <utibeabasiumanah6@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mercek_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "12"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
async-trait = "0.1"
futures = "0.3"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-smithy-types = { version = "1", features = ["serde-serialize"] }
aws-sdk-ecs = "1"
aws-sdk-sts = "1"
aws-sdk-elasticloadbalancingv2 = "1"
aws-sdk-applicationautoscaling = "1"
aws-sdk-cloudwatch = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sdk-ec2 = "1"
redb = "2"

