[package]
name = "mercek"
version = "0.1.1"
description = "A desktop IDE for AWS ECS"
authors = ["Utibeabasi Umanah <utibeabasiumanah6@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mercek_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Title-case binary so the macOS dock / app name reads "Mercek" (not the
# lowercase crate name) when running. Kept in sync with mainBinaryName.
[[bin]]
name = "Mercek"
path = "src/main.rs"

[features]
# Offline test seam: mock AWS clients + mock harness + fixtures.
# NOT enabled in the shipped app — the running binary always hits real AWS and a
# real ACP harness. Tests run with `--features mock`.
mock = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "12"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
async-trait = "0.1"
futures = "0.3"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-smithy-types = { version = "1", features = ["serde-serialize"] }
aws-sdk-ecs = "1"
aws-sdk-ecr = "1"
aws-sdk-sts = "1"
aws-sdk-elasticloadbalancingv2 = "1"
aws-sdk-applicationautoscaling = "1"
aws-sdk-cloudwatch = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sdk-ec2 = "1"
redb = "2"
# ACP client for the agent panel (spec: agent-panel.md). The harness connects over
# ACP; the read-only ECS tools are served to it via an in-process MCP-over-ACP server.
agent-client-protocol = { version = "0.13", features = ["unstable_mcp_over_acp"] }
agent-client-protocol-rmcp = "0.13"
# MCP tool server: bridged over ACP (no port) AND runnable as `mercek --mcp` over
# stdio (the standard way harnesses like Claude Code load MCP servers — see Pencil).
rmcp = { version = "1", features = ["server", "macros", "transport-io"] }

